Lösung für Modul "13_FilesAndNetwork/homework_13.1"